--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,11 @@
 			<version>1.3.2</version>
 		</dependency>
 		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>7.0</version>
+		</dependency>
+		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<version>1.4.200</version>
@@ -133,5 +138,11 @@
 	        <version>5.4.0</version>
 	        <scope>test</scope>
 	    </dependency>
+	    <!-- pour les mots de passe encryptes -->
+	    <dependency>
+		    <groupId>org.mindrot</groupId>
+		    <artifactId>jbcrypt</artifactId>
+		    <version>0.4</version>
+		</dependency>
 	</dependencies>
 </project>
