--- a/pom.xml
+++ b/pom.xml
@@ -169,5 +169,11 @@
 		    <artifactId>jbcrypt</artifactId>
 		    <version>0.4</version>
 		</dependency>
+		<!-- Tests mock -->
+		<dependency>
+           <groupId>javax.el</groupId>
+           <artifactId>javax.el-api</artifactId>
+           <version>3.0.0</version>
+        </dependency>
 	</dependencies>
 </project>
